mash: Connect Chrome to ShelfController before BrowserStatusMonitor init.

Bug: 766864
Change-Id: I1c32a7cd286303f1ed040869aced4c023deabbef